# virtual

./: .gitignore  README.md  pyproject.toml
docs/: game.html  index.html
docs/assets/: index.css
docs/game/: backend_api.py  example.html  leaderboard.html  name.html  quiz.html  result.html
docs/game/assets/quizzes/: quiz1.csv  quiz2.csv  quiz3.csv  quiz4.csv  quiz5.csv
examples/: .gitignore  demo-csv.ipynb  demo-df.ipynb  demo-lineitem.ipynb  demo-parquet.ipynb  demo-readset.ipynb  demo-redset.ipynb  demo-taxi.ipynb  demo_util.py  example.csv  example.parquet
string_compression/: .gitignore  FW.py  FinewebURL.py  FinewebURL_time.py  Flickr.py  Metanova.py  README.md  auto_pre-suffix.ipynb  auto_pre_suffix.py  config.json  config_empty.json  download_dataset.py  duckdb.ipynb  generate_random_string_dataset.py  merge_plot.ipynb  openai_test.ipynb  requirements.txt  result_plot.ipynb  sth.txt  summarize_fineweb_urls.ipynb  summarize_flicker.ipynb  summarize_utils.py  summarize_wiki.ipynb  utils.py  wiki.py  wiki_time.py
string_compression/notebooks/: FW.ipynb  Flickr_test.ipynb  Metanova.ipynb  auto_pre-suffix.ipynb  dataset.ipynb  wiki_test.ipynb
tests/: sample_data1.json  sample_data2.json  schema1.json  test_expr_parser.py  test_interface.py  test_v_optimizer.py  test_v_size.py  utils.py
virtual/: btrblocks_utils.py  data_handler.py  expr_optimizer.py  expr_parser.py  interface.py  io_utils.py  utils.py  v_compressor.py  v_driller.py  v_optimizer.py  v_reconstructor.py  v_size.py
virtual/models/: k_regression.py  sparse_model.py
virtual/schema_inference/: __init__.py  heavyweight_schema_inference.py  lightweight_schema_inference.py  schema_utils.py
